fix styling on small screens

--- a/style.css
+++ b/style.css
@@ -1,26 +1,25 @@
-body{
-    background-color: darkblue;
-    background-image: url("images/inkpendude-portal-storm.gif");
-    background-position: center;
-    background-size:cover;
-    text-align: center;
-    color:whitesmoke;
-    padding-top: 10%;
-    
+body {
+  background-color: darkblue;
+  background-image: url("images/inkpendude-portal-storm.gif");
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  color: whitesmoke;
+  padding-top: 10%;
 }
 
-p,label{
-     white-space: pre;
+form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+footer {
+  color: #4fb4d0;
+  margin-top: 5px;
+  float: center;
 }
 
-footer{
-    color: #4FB4D0;
-    margin-top: 5px;
-    float: center;
-
-}
-
-foot,a{
-    color:orange;
-    
+foot,
+a {
+  color: orange;
 }
